Fixed title spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,7 +124,7 @@ body {
   font-size: 5em;
   position: absolute;
   top: 18%;
-  left: 9%;
+  left: 0;
   opacity: 0;
   z-index: 2;
 }
@@ -135,7 +135,7 @@ body {
   font-size: 5em;
   position: absolute;
   top: 40%;
-  left: 12%;
+  left: 73px;
   opacity: 0;
   z-index: 2;
 }
@@ -143,7 +143,7 @@ body {
   font-size: 5em;
   position: absolute;
   top: 40%;
-  left: 14%;
+  left: 117px;
   opacity: 0;
   z-index: 2;
 }
@@ -151,7 +151,7 @@ body {
   font-size: 5em;
   position: absolute;
   top: 40%;
-  left: 14.7%;
+  left: 130px;
   opacity: 0;
   z-index: 2;
 }
@@ -159,7 +159,7 @@ body {
   font-size: 5em;
   position: absolute;
   top: 40%;
-  left: 16.2%;
+  left: 166px;
   opacity: 0;
   z-index: 2;
 }
@@ -167,7 +167,7 @@ body {
   font-size: 5em;
   position: absolute;
   top: 40%;
-  left: 18.5%;
+  left: 222px;
   opacity: 0;
   z-index: 2;
 }
